--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -18,5 +18,5 @@ jobs:
         run: pip install pytest
 
       - name: Ejecutar pruebas
-        run: pytest tests
+        run: pytest test_app.py -q
 
